Fixed Header overflow and fixed flex-box main div

--- a/assets/Style/main.css
+++ b/assets/Style/main.css
@@ -855,18 +855,16 @@ a{text-decoration: none;}
   
   .header__top{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    direction: rtl;
     padding: 24px 16px 12px 16px;
-    white-space: nowrap;
     font-size: var(--size-text-10);
-    flex-shrink: 0;
   }
   
   .header__nav{
-    order:2;
+    order:3;
     width: 100%;
   }
   
@@ -874,7 +872,7 @@ a{text-decoration: none;}
     display: flex;
     width: 100%;
     padding:16px 0;
-    order:3;
+    order:2;
   }
   
   .header__menulist{
@@ -882,7 +880,7 @@ a{text-decoration: none;}
     position: absolute;
     overflow-y: hidden;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
   }
   .header__navitem{
@@ -903,6 +901,7 @@ a{text-decoration: none;}
   
   .header__logo{
     margin-left: 50px;
+    order: 1;
   }
   
   .header__menuMobile_content{
@@ -1123,7 +1122,7 @@ a{text-decoration: none;}
   .header_btnhamburger{
     box-sizing: border-box;
     background: transparent;
-    margin: 0 24px;;
+    margin-left: 24px;;
     border: 0;
     padding: 9px 8px;
     z-index: 10;
